@@ -17,3 +17,13 @@ dependencies {
 jar {
     archiveBaseName.set('GuangDianArmorStats')
 }
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs.add('--add-modules')
+    options.compilerArgs.add('jdk.incubator.vector')
+}
